--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
             seamlessly on all devices, including mobiles.
           </p>
           <h2>HTML&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;VANILLA</h2>
-          <a href="" target="_blank"
+          <a href="https://github.com/userTaqi/PortfolioWebsite" target="_blank"
             ><i class="fa-brands fa-github"> Code</i></a
           >
         </div>
