--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
 
       <div class="div-rev">
         <div>
-          <h1>Weather Google Extension</h1>
+          <h1>Weather Extension</h1>
           <p>
             Real-time weather information. Using WeatherAPI.com, it provides
             current conditions in a clean, minimalist interface.
