--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
             Responsive portfolio website! Designed and developed to be viewed
             seamlessly on all devices, including mobiles.
           </p>
-          <h2>HTML&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;VANILLA</h2>
+          <h2>HTML&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CSS</h2>
           <a href="https://github.com/userTaqi/PortfolioWebsite" target="_blank"
             ><i class="fa-brands fa-github"> Code</i></a
           >
@@ -36,7 +36,7 @@
             current conditions in a clean, minimalist interface.
           </p>
           <h2>
-            HTML&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;VANILLA
+            HTML&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             CSS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;JAVASCRIPT
           </h2>
           <a href="https://github.com/userTaqi/WeatherExtension" target="_blank"
